-Added True USD (TUSD) as a base trading pair (Binance now supports this)
-Bug fix in raw formatted numbers in price alert logic (skewed large numbers with formatting)
-Removed bter / liqui / gatecoin.io API logic and coin data (they closed down)
-Updated Kucoin API
-------------------------------------------------------------------



-------------------------------------------------------------------
2.3.6:
-Config setting for only allowing exchange price alerts if a minimum 24 hour volume has been met
-SMTP error logging
-Semantics
-Minor browser compatibility revisions
-Default settings tweaks
-Other minor revisions
-------------------------------------------------------------------



-------------------------------------------------------------------
2.3.7:
-Minor revisions
-Fixed error logs purge bug
-Fixed audio alerts bug
-UX work with enabled volume filter for exchange price alert messages
-------------------------------------------------------------------



-------------------------------------------------------------------
2.3.8:
-Fixed minor SMTP bug (added new to address every addTo call, even if the same address)
-Default configuration tweaks
-Missing dollar sign in volume column, after logic overhaul
-Minor revisions in help page
-Cryptopia market volume API support
-------------------------------------------------------------------



-------------------------------------------------------------------
2.3.9:
-Tidied up disclaimer UX
-Added Crypto Tools section
-Added QR code generator for addresses
-------------------------------------------------------------------



-------------------------------------------------------------------
2.4.0:
-Updated Okex API to v3
-UI and config tweaks
-Semantics on PHP library subdirectory structure
-Coin config structure optimization
-------------------------------------------------------------------

































































































