@@ -141,7 +141,7 @@ function etherscan_api($block_info) {
  
 global $chainstats_cache;
 
-  $json_string = 'http://api.etherscan.io/api?module=proxy&action=eth_blockNumber';
+  $json_string = 'https://api.etherscan.io/api?module=proxy&action=eth_blockNumber';
   $jsondata = @api_data('url', $json_string, $chainstats_cache);
     
   $data = json_decode($jsondata, TRUE);
@@ -156,7 +156,7 @@ global $chainstats_cache;
     		// Non-dynamic cache file name, because filename would change every recache and create cache bloat
     		if ( update_cache_file('cache/api/eth-stats.dat', $chainstats_cache ) == true ) {
 			
-  			$json_string = 'http://api.etherscan.io/api?module=proxy&action=eth_getBlockByNumber&tag='.$block_number.'&boolean=true';
+  			$json_string = 'https://api.etherscan.io/api?module=proxy&action=eth_getBlockByNumber&tag='.$block_number.'&boolean=true';
   			$jsondata = @api_data('url', $json_string, 0); // ZERO TO NOT CACHE DATA (WOULD CREATE CACHE BLOAT)
     		
     		file_put_contents('cache/api/eth-stats.dat', $jsondata, LOCK_EX);
