@@ -7,10 +7,10 @@
 			$calculation_form_data = array(
 											'Ethereum', // Coin name
 											'eth', // Coin symbol
-											etherscan_api('number'), // Block height
-											etherscan_api('difficulty'), // Mining network measure (difficulty or network hashrate)
+											hexdec( etherscan_api('number') ), // Block height
+											hexdec( etherscan_api('difficulty') ), // Mining network measure (difficulty or network hashrate)
 											'https://etherscan.io/apis/', // Blockchain data API url
-											'etherscan.io/apis', // Blockchain data API name
+											'Etherscan.io API', // Blockchain data API name
 											'binance', // Exchange name (lowercase for API logic)
 											'ETHBTC' // Market pair name
 											);
@@ -18,8 +18,8 @@
 			
 			///////////////////////////////////////////////////////////////////////////
 			
-			echo '<p><b>Block height:</b> ' . number_format(hexdec($calculation_form_data[2])) . '</p>';
-			echo '<p><b>Gas limit:</b> ' . number_format(hexdec(etherscan_api('gasLimit'))) . '</p>'; // Custom for this Ethereum mining calculator
+			echo '<p><b>Block height:</b> ' . number_format( $calculation_form_data[2] ) . '</p>';
+			echo '<p><b>Gas limit:</b> ' . number_format( hexdec( etherscan_api('gasLimit') ) ) . '</p>'; // Custom for this Ethereum mining calculator
 				
 			// Start form submission results
 			if ( $_POST[$calculation_form_data[1].'_submitted'] ) {
